--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
     <h2>This is my first githum submitted website</h2>
+    <input type="text">
+    <br>
+    <button>Click me baby</button>
 </body>
 </html>
